force-app/main/default/objects/V_User_Sys_Phone_Number__c/V_User_Sys_Phone_Number__c.object-meta.xml
<CustomObject>
    <description>Voice - WCSA - Company Level Accts - User System Phone Numbers</description>
    <label>Associated User Phone Number</label>
    <nameField>
        <displayFormat>USP-{00000000}</displayFormat>
        <label>USP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated User Phone Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>