force-app/main/default/objects/V_User_Sys_Phone_Number__c/fields/Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Company_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Voice - WCSA - Company - Related to this User System Phone Number</description>
    <inlineHelpText>Voice - WCSA - Company - Related to this User System Phone Number</inlineHelpText>
    <label>Company Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>V_User_Sys_Phone_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>