force-app/main/default/objects/V_User_Sys_Phone_Number__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Voice - WCSA - Primary = Yes / No</description>
    <inlineHelpText>Voice - WCSA - Primary = Yes / No</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>