force-app/main/default/objects/V_User_Sys_Phone_Number__c/fields/User_SPN__c.field-meta.xml
<CustomField>
    <fullName>User_SPN__c</fullName>
    <description>Voice - WCSA - Company Level Accts - User System Phone Numbers</description>
    <inlineHelpText>Voice - WCSA - Company Level Accts - User System Phone Numbers</inlineHelpText>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>V_User_Sys_Phone_Number</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>