force-app/main/default/objects/V_User_Sys_Phone_Number__c/fields/User_System_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>User_System_Phone_Number__c</fullName>
    <description>Voice - WCSA - Company level Account - Unique User System Phone Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Voice - WCSA - Company level Account - Unique User System Phone Number</inlineHelpText>
    <label>User System Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>